--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <version>7.10.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
 
     </dependencies>
 </project>
